--- a/lab7/Gemfile
+++ b/lab7/Gemfile
@@ -1,5 +1,6 @@
 source "http://rubygems.org"
 
+
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
 gem "rails", "~> 7.2.2"
 # The original asset pipeline for Rails [https://github.com/rails/sprockets-rails]
@@ -19,10 +20,8 @@ gem "jbuilder"
 # Use Redis adapter to run Action Cable in production
 # gem "redis", ">= 4.0.1"
 
-# bootstap
-gem 'bootstrap', '~> 5.0'
-
-gem 'sassc-rails'
+#auth
+gem "devise"
 
 # Use Kredis to get higher-level data types in Redis [https://github.com/rails/kredis]
 # gem "kredis"
